Add GUI Supplier / Connect Logic (SupplierViewModel) with Gui (SupplierView)

--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -80,6 +80,8 @@
     <Compile Include="DataAccess\Repository.cs" />
     <Compile Include="DataAccess\Stammdaten\Customer\CustomerRepository.cs" />
     <Compile Include="DataAccess\Stammdaten\Product\ProductRepository.cs" />
+    <Compile Include="DataAccess\Stammdaten\Supplier\ISupplierRepository.cs" />
+    <Compile Include="DataAccess\Stammdaten\Supplier\SupplierRepository.cs" />
     <Compile Include="DataAccess\Stammdaten\User\UserRepository.cs" />
     <Compile Include="Data\Channel\ConnectionFactory.cs" />
     <Compile Include="DI\DIContainer.cs" />
@@ -96,6 +98,9 @@
     <Compile Include="DataAccess\Stammdaten\Customer\CustomerAddedEventArgs.cs" />
     <Compile Include="Guis\Stammdaten\Product\ProductsView.xaml.cs">
       <DependentUpon>ProductsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Guis\Stammdaten\Supplier\SuppliersView.xaml.cs">
+      <DependentUpon>SuppliersView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Guis\Stammdaten\User\AllUsersView.xaml.cs">
       <DependentUpon>AllUsersView.xaml</DependentUpon>
@@ -115,6 +120,7 @@
     <Compile Include="ViewModel\Stammdaten\Product\IAllProductsViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Product\IProductViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Product\ProductViewModel.cs" />
+    <Compile Include="ViewModel\Stammdaten\Supplier\SupplierViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\User\AllUsersViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\User\IAllUsersViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\User\IUserViewModel.cs" />
@@ -141,6 +147,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Guis\Stammdaten\Product\ProductsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Guis\Stammdaten\Supplier\SuppliersView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
