--- a/Trunk/DAL/DAL.csproj
+++ b/Trunk/DAL/DAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Selections\Stammdaten\Customer\CustomerDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Product\ProductDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Quattro\QuattroDataFactory.cs" />
+    <Compile Include="Selections\Stammdaten\Supplier\SupplierDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\User\UserDataFactory.cs" />
   </ItemGroup>
   <ItemGroup>
