Publish Supplier for Front End

--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -35,7 +35,19 @@
              bindingConfiguration="NetTcpBindingEndpointConfig"
              binding="netTcpBinding"
              contract="BL.Service.Stammdaten.Product.IProductService">
-       
+      
+        <identity>
+          <dns value="SimiPro2"/>
+        </identity>
+      </endpoint>
+
+      <endpoint
+       address="net.tcp://10.12.10.150:2526/Service/SupplierService"
+       name="SupplierService"
+       bindingConfiguration="NetTcpBindingEndpointConfig"
+       binding="netTcpBinding"
+       contract="BL.Service.Stammdaten.Supplier.ISupplierService">
+
         <identity>
           <dns value="SimiPro2"/>
         </identity>
