--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Stammdaten\Product\ProductFactory.cs" />
     <Compile Include="Stammdaten\Product\ProductView.cs" />
     <Compile Include="Stammdaten\Customer\CustomerView.cs" />
+    <Compile Include="Stammdaten\Supplier\ISupplierService.cs" />
     <Compile Include="Stammdaten\Supplier\ISupplierView.cs" />
     <Compile Include="Stammdaten\Supplier\SupplierFactory.cs" />
     <Compile Include="Stammdaten\Supplier\SupplierView.cs" />
