--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Data\Channel\ConnectionFactory.cs" />
     <Compile Include="DI\DIContainer.cs" />
     <Compile Include="Events\BooleanEventArg.cs" />
+    <Compile Include="Guis\BusinessProcesses\Sales\offer.xaml.cs">
+      <DependentUpon>offer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Guis\Security\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
     <Compile Include="Guis\Stammdaten\Customer\CustomersView.xaml.cs">
       <DependentUpon>CustomersView.xaml</DependentUpon>
     </Compile>
+    <Page Include="Guis\BusinessProcesses\Sales\offer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Guis\Security\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -236,7 +243,9 @@
       <Name>Views</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Guis\BusinessProcesses\Purchase\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
