--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -244,7 +244,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="DataAccess\BusinessProcesses\Purchase\" />
+    <Folder Include="DataAccess\BusinessProcesses\Sales\Offer\" />
     <Folder Include="Guis\BusinessProcesses\Purchase\" />
+    <Folder Include="ViewModel\BusinessProcesses\Purchase\" />
+    <Folder Include="ViewModel\BusinessProcesses\Sales\Offer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
