--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -34,7 +34,7 @@
              name="ProductService"
              bindingConfiguration="NetTcpBindingEndpointConfig"
              binding="netTcpBinding"
-             contract="BL.Service.Stammdaten.Product.IProductService">
+             contract="Views.Stammdaten.Product.IProductService">
       
         <identity>
           <dns value="SimiPro2"/>
