add offer, offer repo, interface offer, interface offer repo, folders added

--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessProcesses\Sales\Offer\IOfferService.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\IOfferView.cs" />
+    <Compile Include="BusinessProcesses\Sales\Offer\OfferFactory.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\OfferView.cs" />
     <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
