Create UserService (Views)

--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Stammdaten\Supplier\ISupplierView.cs" />
     <Compile Include="Stammdaten\Supplier\SupplierFactory.cs" />
     <Compile Include="Stammdaten\Supplier\SupplierView.cs" />
+    <Compile Include="Stammdaten\User\IUserService.cs" />
     <Compile Include="Stammdaten\User\IUserView.cs" />
     <Compile Include="Stammdaten\User\UserFactory.cs" />
     <Compile Include="Stammdaten\User\UserView.cs" />
