--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -24,7 +24,7 @@
                 name="UserService"
                 bindingConfiguration="NetTcpBindingEndpointConfig"
                 binding="netTcpBinding"
-                contract="BL.Service.Stammdaten.User.IUserService">
+                contract="Views.Stammdaten.User.IUserService">
         <identity>
           <dns value="SimiPro2"/>
         </identity>
