--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -46,7 +46,7 @@
        name="SupplierService"
        bindingConfiguration="NetTcpBindingEndpointConfig"
        binding="netTcpBinding"
-       contract="Views.Stammdaten.Product.IProductService">
+       contract="Views.Stammdaten.Supplier.ISupplierService">
 
         <identity>
           <dns value="SimiPro2"/>
