--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="BusinessProcesses\Sales\Offer\IOfferService.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\IOfferView.cs" />
+    <Compile Include="BusinessProcesses\Sales\Offer\ISalesItem.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\OfferFactory.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\OfferView.cs" />
     <Compile Include="PagedResult.cs" />
