--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -79,6 +79,7 @@
     <Compile Include="DataAccess\BusinessProcesses\Sales\IQuattroRepository.cs" />
     <Compile Include="DataAccess\BusinessProcesses\Sales\Offer\IOfferRepository.cs" />
     <Compile Include="DataAccess\BusinessProcesses\Sales\Offer\OfferRepository.cs" />
+    <Compile Include="DataAccess\BusinessProcesses\Sales\QuattroRepository.cs" />
     <Compile Include="DataAccess\IRepository.cs" />
     <Compile Include="DataAccess\Repository.cs" />
     <Compile Include="DataAccess\Stammdaten\Customer\CustomerRepository.cs" />
