--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BusinessProcesses\Sales\Offer\ISalesItem.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\OfferFactory.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\OfferView.cs" />
+    <Compile Include="BusinessProcesses\Sales\Order\IOrderService.cs" />
     <Compile Include="BusinessProcesses\Sales\Order\IOrderView.cs" />
     <Compile Include="BusinessProcesses\Sales\Order\OrderFactory.cs" />
     <Compile Include="BusinessProcesses\Sales\Order\OrderView.cs" />
