--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -56,10 +56,10 @@
   <ItemGroup>
     <Compile Include="BusinessProcesses\Sales\IQuattroService.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\IOfferService.cs" />
-    <Compile Include="BusinessProcesses\Sales\Offer\IOfferView.cs" />
+    <Compile Include="BusinessProcesses\Sales\Offer\ISalesHeaderView.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\ISalesItem.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\OfferFactory.cs" />
-    <Compile Include="BusinessProcesses\Sales\Offer\OfferView.cs" />
+    <Compile Include="BusinessProcesses\Sales\Offer\SalesHeaderView.cs" />
     <Compile Include="BusinessProcesses\Sales\Order\IOrderView.cs" />
     <Compile Include="BusinessProcesses\Sales\Order\OrderFactory.cs" />
     <Compile Include="BusinessProcesses\Sales\Order\OrderView.cs" />
