--- a/Trunk/Views/Views.csproj
+++ b/Trunk/Views/Views.csproj
@@ -59,9 +59,6 @@
     <Compile Include="BusinessProcesses\Sales\Offer\ISalesItem.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\SalesFactory.cs" />
     <Compile Include="BusinessProcesses\Sales\Offer\SalesHeaderView.cs" />
-    <Compile Include="BusinessProcesses\Sales\Order\IOrderView.cs" />
-    <Compile Include="BusinessProcesses\Sales\Order\OrderFactory.cs" />
-    <Compile Include="BusinessProcesses\Sales\Order\OrderView.cs" />
     <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Connection\Connection.cs" />
@@ -88,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BusinessProcesses\Purchase\" />
+    <Folder Include="BusinessProcesses\Sales\Order\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
