--- a/Trunk/DAL/DAL.csproj
+++ b/Trunk/DAL/DAL.csproj
@@ -53,9 +53,9 @@
     <Compile Include="MerpDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selections\ASelection.cs" />
+    <Compile Include="Selections\BusinessProcess\Quattro\QuattroDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Customer\CustomerDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Product\ProductDataFactory.cs" />
-    <Compile Include="Selections\Stammdaten\Quattro\QuattroDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Supplier\SupplierDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\User\UserDataFactory.cs" />
   </ItemGroup>
@@ -72,6 +72,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
