--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -76,6 +76,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataAccess\BusinessProcesses\Distribution\DistributionRepository.cs" />
+    <Compile Include="DataAccess\BusinessProcesses\Distribution\IDistributionRepository.cs" />
     <Compile Include="DataAccess\BusinessProcesses\Sales\IQuattroRepository.cs" />
     <Compile Include="DataAccess\BusinessProcesses\Sales\QuattroRepository.cs" />
     <Compile Include="DataAccess\IRepository.cs" />
