--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -52,6 +52,17 @@
           <dns value="SimiPro2"/>
         </identity>
       </endpoint>
+        <endpoint
+          address="net.tcp://10.12.10.150:2526/Service/QuattroService"
+          name="SupplierService"
+          bindingConfiguration="NetTcpBindingEndpointConfig"
+         binding="netTcpBinding"
+          contract="Views.Stammdaten.BusinessProcesses.IQuattroService">
+
+          <identity>
+            <dns value="SimiPro2"/>
+          </identity>
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
