--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Model\Stammdaten\UserFactory.cs" />
     <Compile Include="ViewModel\BusinessProcesses\Distribution\DistributionViewModel.cs" />
     <Compile Include="ViewModel\BusinessProcesses\Sales\Offer\OfferViewModel.cs" />
+    <Compile Include="ViewModel\BusinessProcesses\Sales\Order\OrderViewModel.cs" />
     <Compile Include="ViewModel\NavCommands\TreeViewCommandCategory.cs" />
     <Compile Include="ViewModel\Security\ILoginViewModel.cs" />
     <Compile Include="ViewModel\Security\LoginViewModel.cs" />
@@ -255,7 +256,6 @@
     <Folder Include="DataAccess\BusinessProcesses\Purchase\" />
     <Folder Include="Guis\BusinessProcesses\Purchase\" />
     <Folder Include="ViewModel\BusinessProcesses\Purchase\" />
-    <Folder Include="ViewModel\BusinessProcesses\Sales\Order\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
