--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -54,7 +54,7 @@
       </endpoint>
         <endpoint
           address="net.tcp://10.12.10.150:2526/Service/QuattroService"
-          name="SupplierService"
+          name="QuattroService"
           bindingConfiguration="NetTcpBindingEndpointConfig"
          binding="netTcpBinding"
           contract="Views.Stammdaten.BusinessProcesses.IQuattroService">
@@ -62,6 +62,16 @@
           <identity>
             <dns value="SimiPro2"/>
           </identity>
+      </endpoint>
+      <endpoint
+        address="net.tcp://10.12.10.150:2526/Service/CustomerService"
+        name="CustomerService"
+        bindingConfiguration="NetTcpBindingEndpointConfig"
+        binding="netTcpBinding"
+        contract="Views.Stammdaten.BusinessProcesses.ICustomerService">
+        <identity>
+          <dns value="SimiPro2"/>
+        </identity>
       </endpoint>
     </client>
   </system.serviceModel>
