--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -68,7 +68,7 @@
         name="CustomerService"
         bindingConfiguration="NetTcpBindingEndpointConfig"
         binding="netTcpBinding"
-        contract="Views.Stammdaten.BusinessProcesses.ICustomerService">
+        contract="Views.Stammdaten.Customer.ICustomerService">
         <identity>
           <dns value="SimiPro2"/>
         </identity>
