--- a/Trunk/WpfApplication1/FrontEnd.csproj
+++ b/Trunk/WpfApplication1/FrontEnd.csproj
@@ -138,6 +138,8 @@
     <Compile Include="ViewModel\BusinessProcesses\Purchase\AllPurchaseHeaderViewModel.cs" />
     <Compile Include="ViewModel\BusinessProcesses\Purchase\IAllPurchaseHeaderViewModel.cs" />
     <Compile Include="ViewModel\BusinessProcesses\Purchase\PurchaseHeaderViewModel.cs" />
+    <Compile Include="ViewModel\BusinessProcesses\Sales\Offer\AllOfferViewModel.cs" />
+    <Compile Include="ViewModel\BusinessProcesses\Sales\Offer\IAllOfferViewModel.cs" />
     <Compile Include="ViewModel\BusinessProcesses\Sales\Offer\OfferViewModel.cs" />
     <Compile Include="ViewModel\BusinessProcesses\Sales\Order\OrderViewModel.cs" />
     <Compile Include="ViewModel\NavCommands\TreeViewCommandCategory.cs" />
